# TechChallenge_Fase4

./: .gitignore  Updates.md  prometheus.yml  readme.md  requirements.txt
Docker/: Dockerfile  docker-compose.yml  fase4-Dashboard.json  requirements.txt
Docker/grafana/: Dockerfile
Docker/grafana/dashboards/: fase4-Dashboard.json
Docker/grafana/provisioning/dashboards/: dashboards.yaml
Docker/postgres/: Dockerfile  init.sql
app/: __init__.py  config.py  frontend.py  main.py  pyproject.toml  start.sh
app/Docker/: Dockerfile  docker-compose.yml  requirements.txt
app/api/: app.py
app/application/: main.py
app/model/: model_lstm.keras
app/models/: lstm_model.py
app/services/: prediction_service.py
app/templates/: upload.html
app/utils/: metrics.py
downloadData/: downloadData.py
downloadData/data/: ITUB4.SA_data.csv  PETR4.SA_data.csv  VALE3.SA_data.csv
modelTraining/: modelLSTM.py  modelTrainingLSTM.ipynb  modelTrainingLTSM.ipynb  model_lstm.keras
