[tool.poetry]
name = "stock-prediction-app"
version = "1.0.0"
description = "Aplicação de predição de preços de ações usando LSTM"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
flask = "^3.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
tensorflow = "^2.15.0"
scikit-learn = "^1.3.0"
prometheus-client = "^0.19.0"
gunicorn = "^21.2.0"
streamlit = "^1.45.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
start = "app.api.app:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"